# Pulse

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  AGENTS.md  AGENTS_IMPROVEMENT_SUMMARY.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pr_body.md  preview.html  sync_labels.sh  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml
apps/tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src/: config.rs  error.rs  (+3 more)
apps/web/: eslint.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
docs/: CHANGELOG.md  LICENSE
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  http.rs  lib.rs  notification.rs  tray.rs  window.rs
src-tauri/src/commands/: balance.rs  keychain.rs  mod.rs  provider_key.rs  providers.rs  settings.rs  usage.rs
src-tauri/src/providers/: anthropic.rs  custom.rs  deepseek.rs  mod.rs  openai.rs  openrouter.rs
src/components/: BalanceDisplay.tsx  DetailPanel.tsx  MetricToggle.tsx  NotificationToast.tsx  OverviewPanel.tsx  ProviderCard.tsx  ProviderSettings.tsx  SettingsPanel.tsx
src/hooks/: useBalance.ts  useKeychain.ts  useProviders.ts  useSettings.ts  useTray.ts
src/store/: toastStore.test.ts  toastStore.ts  uiStore.test.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: colors.test.ts  colors.ts  format.test.ts  format.ts  tauri.ts
(+43 files in other folders)
