[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["Pulse Team"]
description = "通用 LLM API 托盘监控工具"
license = "MIT"
repository = "https://github.com/Po1nt9/Pulse"

[lib]
name = "pulse_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "time", "sync"] }
thiserror = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
directories = "5.0"
keyring = { version = "2.3", features = ["linux-secret-service-rt-async-io-crypto-rust"] }

[dependencies.tauri-plugin-notification]
version = "2"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
